--- a/4-NFS-2023/1-Fixing-PCAPs.ipynb
+++ b/4-NFS-2023/1-Fixing-PCAPs.ipynb
@@ -45,8 +45,7 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "# BASE_URL = 'http://205.174.165.80/CICDataset/CIC-IDS-2017/Dataset/PCAPs/'\n",
-    "BASE_URL = 'http://nfstream.lab1.tuke.sk/CICIDS2017/'\n",
+    "BASE_URL = 'TODO' # You can obtain the link for 'CIC-IDS-2017/Dataset/PCAPs/' through https://www.unb.ca/cic/datasets/ids-2017.html\n",
     "SAVE_DIR = 'PCAP/original'\n",
     "\n",
     "# Ensure directory exists\n",
@@ -411,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
